// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`todos.graphql tests it should be able to instantiate store and load initial data 1`] = `
Object {
  "$modelType": "RootStore",
  "__queryCache": Object {
    "$modelId": "id-2",
    "$modelType": "mobx-keystone/ObjectMap",
    "items": Object {},
  },
  "isAttached": false,
  "mergeHelper": Object {
    "$modelType": "MergeHelper",
  },
  "todos": Object {
    "$modelId": "id-1",
    "$modelType": "mobx-keystone/ObjectMap",
    "items": Object {
      "a": Object {
        "$modelType": "Todo",
        "__typename": "Todo",
        "complete": false,
        "id": "a",
        "text": "Initially loaded todo",
      },
    },
  },
}
`;

exports[`todos.graphql tests it should be able to instantiate store and load initial data 3`] = `
Object {
  "$modelType": "RootStore",
  "__queryCache": Object {
    "$modelId": "id-2",
    "$modelType": "mobx-keystone/ObjectMap",
    "items": Object {
      "query todos { todos {
        __typename
id
text
complete

      } }undefined": Object {
        "data": Object {
          "todos": Array [
            Object {
              "__typename": "Todo",
              "id": "a",
            },
            Object {
              "__typename": "Todo",
              "id": "b",
            },
          ],
        },
      },
    },
  },
  "isAttached": false,
  "mergeHelper": Object {
    "$modelType": "MergeHelper",
  },
  "todos": Object {
    "$modelId": "id-1",
    "$modelType": "mobx-keystone/ObjectMap",
    "items": Object {
      "a": Object {
        "$modelType": "Todo",
        "__typename": "Todo",
        "complete": true,
        "id": "a",
        "text": "Initially loaded todo, now updated",
      },
      "b": Object {
        "$modelType": "Todo",
        "__typename": "Todo",
        "complete": false,
        "id": "b",
        "text": "Another todo",
      },
    },
  },
}
`;
